<resources>
    <string name="app_name">B-Club</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_error"> Email not valid </string>
    <string name="hello"> Hi, </string>
    <string name="esclamation">!</string>
    <string name="saved_elements"> Saved elements </string>
    <string name="button_event"> Events </string>
    <string name="button_sg"> Study groups </string>
    <string name="new_post">Which content you want to create?</string>
    <string name="button_info">Info Uni</string>
    <string name="button_other"> Other </string>
    <string name="search_bar_hint">Search posts by title...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="fab_content_desc">New Ad</string>
    <string name="checking_content">We are checking you\'re new content</string>
    <string name="button_ripetizioni">Repetitions</string>
    <string name="my_posts">My Posts</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="open">open</string>
    <string name="add_to_favourite">Add to favorites</string>
    <string name="Save"> Save </string>
    <string name="event"> Event </string>


    <!-- NEW EVENT STRINGS -->

    <string name="event_title_hint">Event Name</string>
    <string name="event_date_button">Pick a date</string>
    <string name="event_desc">Describe your event</string>
    <string name="event_place_text"> Write event place</string>
    <string name="photo_delete"> You want to delete this photo? </string>
    <string name="event_date_picker_hint"> Pick event date</string>
    <string name="event_photo_button">Pick a photo</string>
    <string name="dialog_close"> Close </string>
    <string name="event_photo">event photo</string>
    <string name="dialog_ok_event_photo_delete"> Delete </string>
    <string name="image_delete_snackbar">Photo deleted</string>
    <string name="new_event_toolbar"> New Event</string>

    <!-- NEW GS STRINGS -->

    <string name="gs_title_hint">Study group name</string>
    <string name="gs_date_button">Pick a date</string>
    <string name="gs_desc">Describe your study group</string>
    <string name="gs_place_text"> Write event place</string>
    <string name="gs_photo">study group photo</string>
    <string name="new_gs_toolbar"> New Study Group</string>

    <!-- NEW RIPET STRINGS -->

    <string name="ripet_title_hint"> Repetitions Title</string>
    <string name="ripet_date_button">Pick a date</string>
    <string name="ripet_desc">Which is the topic?</string>
    <string name="ripet_place_text"> Write repetetions place</string>
    <string name="ripet_photo">study group photo</string>
    <string name="new_ripet_toolbar"> New Repetitions</string>

    <!-- NEW INFOS STRINGS -->

    <string name="info_title_hint"> Infos Title </string>
    <string name="info_date_button">Pick a date</string>
    <string name="info_desc">Infos Descriptions</string>
    <string name="info_place_text"> Pick a place</string>
    <string name="info_photo">infos photo </string>
    <string name="new_info_toolbar"> New Infos</string>


    <!-- ERROR STRINGS -->

    <string name="title_error">Insert name</string>
    <string name="place_error">Insert place</string>
    <string name="date_error">Insert date</string>
    <string name="desc_error">Insert description</string>

    <!-- Register strings -->
    <string name="have_account">You already have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>


    <!-- Carousel strings -->
    <string name="first_carousel_txt">BiClub is the application that allows you to experience 360 degrees of what Bicocca University has to offer.</string>
    <string name="second_carousel_txt">With BiClub, you can stay updated on university life and find your favorite study group, tailored to your needs.</string>
    <string name="third_carousel_txt">What are you waiting for? \n<b>Join the community, enter the Club!</b></string>

    <!-- FullRegister -->
    <string name="full_register_title">Share about you!</string>
    <string name="full_register_bio_hint">What key details should we know about you?</string>
    <string name="full_register_end_flow">Finished!</string>
    <string name="register_image"> load profile image </string>
    <string name="image_error"> Error loading image </string>


    <!-- General -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>

    <string name="icon_info_desc">Uni infos image</string>
    <string name="calendar_icon_description">calendar icon</string>
    <string name="ripetizioni_content_desc">Repetitions image</string>
    <string name="share_something">Share with the users</string>

    <!-- POST DETAIL -->
    <string name="already_in"> Already in </string>

    <!-- POST DETAILS CHIP -->
    <string name="gs_chip"> study group</string>
    <string name="event_chip"> event </string>
    <string name="ripet_chip"> repetitions </string>
    <string name="infos_chip"> uni infos </string>

    <!-- LOGIN -->
    <string name="login">Login</string>
    <string name="new_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_error"> wrong email or password </string>
    <string name="invalid_input"> credentials not valid </string>
    <string name="login_fail"> fail login task </string>

    <!-- REGISTER -->
    <string name="wrong_email_format"> wrong email format </string>
    <string name="wrong_pass_format"> wrong password format </string>
    <string name="no_pw_match">passwords not matching </string>
    <string name="pw_pattern">Click here to see password format! </string>
    <string name="okDialog"> Ok </string>
    <string name="password_dialog_title"> Password constraints</string>
    <string name="password_infos"> \n at least 4 characters long \n\n must contain an uppercase character \n\n Must contain a special symbol</string>
    <string name="empty_fields">Fill every field</string>
    <string name="group_cont_desc">Study Group Image</string>
    <string name="desc_logo_app">Logo applicazione B-Club</string>

    <!-- USER LOGOUT -->
    <string name="logout">Logout</string>

    <string name="invalid_date">Invalid date</string>

    <string name="join">Join</string>
    <string name="event_image_cd">Image describing event content</string>
    <string name="arrow_back_cd">Button to go back</string>
    <string name="image_author_post_cd">Image showing post\'s author</string>
    <string name="user_name">Username</string>
    <string name="user_settings">User settings</string>
    <string name="del_photo_fab_cd">button delete image</string>
    <string name="ripet_imageview_cd">repetitions selected image</string>
    <string name="user_profile_image">User profile image</string>
    <string name="ok_button">Ok</string>
    <string name="no_photo_reg">If you don\'t pick a profile image, we\'ll asign you a default one! Is it ok?</string>

    <string name="in_group">You joined </string>

    <string name="error">An error occurred!</string>
    <!-- ONBOARDING -->
    <string name="top_cloud_onboarding">Top cloud</string>
    <string name="bottom_cloud_onboarding">Bottom cloud</string>
    <string name="next_button">Next button</string>
    <string name="previous_button">Previous button</string>
    <string name="page_number_indicator">Page number indicator</string>
    <string name="settings">Settings</string>
    <string name="group_is_bicocca">Access permitted only to Bicocca users</string>
    <string name="error_group_chat">Error in loading chats, restart the application</string>
    <string name="removed_group_chat">Group chat removed!</string>
    <string name="left_group_chat_msg">left the chat</string>
    <string name="join_group_chat_msg">joined the chat</string>
    <string name="event_leave_group_chat">Leave the group</string>
    <string name="message_leave_group_chat">You are leaving this group, are you sure?</string>
    <string name="chosen_image">Choosen image</string>
    <string name="max_char_text">maximum characters allowed!</string>
    <string name="no_email_error">Email not avaible</string>
    <string name="event_logout">You want to logout?</string>
    <string name="message_logout">You are going to logout, are you sure?</string>
    <string name="error_fullregister">Error in uploading your credentials, please retry</string>
    <string name="event_data_pick">Pick the date for the event</string>
    <string name="tag" translatable="false">TAG</string>
    <string name="onboarding_image">Onboarding image</string>
    <string name="msg_hint">Type...</string>

</resources>