<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/new_post_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_something"
            android:padding="20dp"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/topAddRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/new_post_text">

            <ImageView
                android:id="@+id/bottomAddImageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/createpost"
                android:alpha="0.6"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/first_row_new_post"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:elevation="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/new_event_button"
                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                        android:layout_width="150dp"
                        android:layout_height="70dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/button_event"
                        app:icon="@drawable/light_2" />

                    <Button
                        android:id="@+id/new_info_button"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="150dp"
                        android:layout_height="70dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/button_info"
                        app:icon="@drawable/ic_notifications_black_24dp" />

                    <Button
                        android:id="@+id/new_gs_button"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="150dp"
                        android:layout_height="70dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/button_sg"
                        app:icon="@drawable/libri" />

                    <Button
                        android:id="@+id/new_ripetizioni_button"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="150dp"
                        android:layout_height="70dp"
                        android:text="@string/button_ripetizioni"
                        app:icon="@drawable/online_worlds" />
                </LinearLayout>

        </RelativeLayout>
        </RelativeLayout>


    </RelativeLayout>

</FrameLayout>