<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.FullRegisterFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/full_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/full_register_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Name input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/full_register_name"
        android:layout_width="170dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toBottomOf="@+id/full_register_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Surname input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/full_register_surname"
        android:layout_width="170dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dx"
        app:layout_constraintTop_toBottomOf="@+id/full_register_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/surname"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Bio input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/full_register_bio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="200dp"
        android:hint="@string/full_register_bio_hint"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dx"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toBottomOf="@+id/full_register_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- End flow button -->
    <Button
        android:id="@+id/full_register_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_image"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dx"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toBottomOf="@+id/full_register_bio"
        app:layout_constraintVertical_bias="0.138" />

    <!-- Guidelines -->
    <Button
        android:id="@+id/full_register_end_flow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_register_end_flow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dx"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toBottomOf="@+id/full_register_bio"
        app:layout_constraintVertical_bias="0.605" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_dx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>