<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="0dp"
        android:elevation="0dp"
        app:srcCompat="@drawable/arrow_back"
        app:backgroundTint="?attr/colorSurfaceContainer"
        style="?attr/floatingActionButtonSmallPrimaryStyle"
        android:contentDescription="@string/arrow_back_cd">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <ScrollView

        android:id="@+id/post_scroll_view"
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:scrollbars="vertical"


        app:layout_constraintTop_toBottomOf="@+id/backButton"
        tools:context=".ui.home.dashboard.PostDetailsFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/floating_button">

                <com.google.android.material.chip.Chip
                    android:id="@+id/postDetailChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/infos_chip"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:chipCornerRadius="3dp"
                    app:chipEndPadding="8dp"
                    app:chipMinHeight="20dp"
                    app:chipStartPadding="8dp"
                    app:chipStrokeWidth="0dp"
                    style="?attr/textAppearanceButton"/>

                <LinearLayout
                    android:id="@+id/post_author_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/postDetailChip"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">


                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/post_user_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/image_author_post_cd"
                        android:scaleType="centerCrop"
                        android:src="@drawable/analisi"
                        app:shapeAppearanceOverlay="@style/Circular"
                        tools:ignore="ImageContrastCheck" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/postTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/info_title_hint"
                            style="?attr/textAppearanceHeadline5"/>

                        <TextView
                            android:id="@+id/user_name_post"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:textAlignment="center"
                            style="?attr/textAppearanceSubtitle2"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/postInfosBlock"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <TextView
                                android:id="@+id/postPlace"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="12dp"
                                android:text="@string/event_place_text"
                                android:textStyle="bold"
                                style="?attr/textAppearanceLabelLarge"/>

                            <TextView
                                android:id="@+id/postDate"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.2"
                                android:text="@string/info_date_button"
                                style="?attr/textAppearanceLabelSmall"/>


                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/post_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@id/post_author_layout" />


                <TextView
                    android:id="@+id/postDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/post_divider"
                    android:layout_marginBottom="80dp"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:text="@string/info_desc"
                    style="?attr/textAppearanceBody1"/>

            </RelativeLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/floating_button"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/imageview_favorite_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            android:text="@string/Save"
            app:icon="@drawable/baseline_favorite_border_24"
            app:srcCompat="@drawable/arrow_back"
            style="?attr/floatingActionButtonSmallPrimaryStyle"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/gsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/join"
            app:icon="@drawable/chat"
            app:srcCompat="@drawable/arrow_back"
            style="?attr/floatingActionButtonSmallPrimaryStyle"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>