<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.ViewPagerFragment">

    <ImageView
        android:id="@+id/bottomCloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-60dp"
        android:contentDescription="@string/bottom_cloud_onboarding"
        android:rotationY="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bg_1" />

    <ImageView
        android:id="@+id/topCloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="-60dp"
        android:contentDescription="@string/top_cloud_onboarding"
        android:rotation="0"
        android:rotationX="180"
        android:rotationY="0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_1" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:backgroundTint="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/next_button"
        android:rotationY="180"
        style="?attr/floatingActionButtonSmallPrimaryStyle"
        app:tint="?attr/colorPrimary"
        app:backgroundTint="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrow_back">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>


    <!-- POINTERS -->
    <ImageView
        android:id="@+id/pointer0"
        android:layout_width="30dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="32dp"
        android:background="?attr/colorPrimary"
        android:contentDescription="@string/page_number_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/pointer1"
        android:layout_width="30dp"
        android:layout_height="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:background="?attr/colorPrimary"
        android:contentDescription="@string/page_number_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pointer0" />

    <ImageView
        android:id="@+id/pointer2"
        android:layout_width="30dp"
        android:layout_height="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:background="?attr/colorPrimary"
        android:contentDescription="@string/page_number_indicator"
        app:layout_constraintBottom_toBottomOf="@+id/bottomCloud"
        app:layout_constraintStart_toEndOf="@+id/pointer1" />

</androidx.constraintlayout.widget.ConstraintLayout>